# lakehouse

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  todo.md
src/core/: settings.py
src/etl/configs/dataphile/: account.yaml  account_fee_data.yaml  accounts.yaml  accounts_fee_data.yaml  address.yaml  addresses.yaml  associated_parties.yaml  associated_party.yaml  client.yaml  clients.yaml  contract.yaml  crs_record.yaml  crs_records.yaml  document.yaml  documents.yaml  exchange_rate.yaml  exchange_rates.yaml  fee_group.yaml  fee_groups.yaml  holidays.yaml  insider_record.yaml  insider_records.yaml  kyc_information.yaml  position.yaml  positions.yaml  restrictions.yaml  securities.yaml  security.yaml  trade.yaml  trades.yaml  transaction.yaml  transactions.yaml
src/ingestion/: bundle_layout.py  business_calendar.py  csv_config.py  domain.py  extract.py  extraction_task.py  ledger_store.py  load_planner.py  orchestrator.py  type_casters.py  utils.py
src/ingestion/type_casters/: __init__.py  base_caster.py  boolean_caster.py  common.py  date_caster.py  decimal_caster.py  integer_caster.py  string_caster.py
src/sqlmesh_transformation/: config.py  external_models.yaml
src/sqlmesh_transformation/audits/: assert_foreign_key.sql  assert_foreign_key_scd_asof.sql
src/sqlmesh_transformation/macros/: macros.py  type_casting.py
src/sqlmesh_transformation/models/bronze/: as_of_date_map.sql
src/sqlmesh_transformation/models/silver_dataphile/: account_snapshot.sql  address_snapshot copy.sql  associated_party_snapshot.sql  client_snapshot.sql  restrictions.sql  (+10 more)
(+16 files in other folders)
